<resources>
    <string name="app_name" translatable="false">Retro Cassette</string>
    <string name="nav_home">Início</string>
    <string name="nav_search">Buscar</string>
    <string name="nav_library">Biblioteca</string>
    <string name="brand" translatable="false">Cassette</string>
    <string name="action_play">Tocar</string>
    <string name="action_pause">Pausar</string>
    <string name="action_next">Próxima</string>
    <string name="action_back">Voltar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_save">Salvar</string>
    <string name="action_create">Criar</string>
    <string name="action_delete">Excluir</string>
    <string name="action_rename">Renomear</string>
    <string name="action_open">Abrir</string>
    <string name="action_clear">Limpar</string>
    <string name="action_search">Buscar</string>
    <string name="action_shuffle">Aleatório</string>
    <string name="action_options">Opções</string>
    <string name="action_settings">Configurações</string>
    <string name="action_reload_library">Recarregar biblioteca</string>
    <string name="menu_play_next">Tocar a seguir</string>
    <string name="menu_add_to_queue">Adicionar à fila</string>
    <string name="menu_add_favorite">Adicionar às favoritas</string>
    <string name="menu_remove_favorite">Remover das favoritas</string>
    <string name="menu_save_to_playlist">Salvar na playlist</string>
    <string name="menu_remove_from_playlist">Remover da playlist</string>
    <string name="menu_delete_from_device">Excluir do aparelho</string>
    <string name="menu_play_shuffled">Tocar em ordem aleatória</string>
    <string name="menu_edit_playlist">Editar playlist</string>
    <string name="menu_delete_playlist">Excluir playlist</string>
    <string name="unknown_title">Faixa sem título</string>
    <string name="unknown_artist">Artista desconhecido</string>
    <string name="unknown_album">Álbum desconhecido</string>
    <string name="song_subtitle">%1$s • %2$s</string>
    <string name="subtitle_album">Álbum • %1$s • %2$s</string>
    <string name="subtitle_artist">Artista • %1$s</string>
    <string name="subtitle_playlist">Playlist • %1$s</string>
    <string name="subtitle_auto_playlist">Playlist automática • %1$s</string>
    <string name="playlist_favorites">Favoritas</string>
    <string name="playlist_all_songs">Todas as músicas</string>
    <string name="playlist_recently_added">Adicionadas recentemente</string>
    <string name="cassette_default_title">MIX TAPE</string>
    <string name="cassette_default_subtitle">PLAYLIST</string>
    <string name="home_chip_all">Tudo</string>
    <string name="home_loading">REBOBINANDO…</string>
    <string name="home_no_songs">Nenhuma música encontrada no dispositivo.</string>
    <string name="home_jukebox">Jukebox de fitas</string>
    <string name="home_your_collection">Sua coleção</string>
    <string name="home_open_library">Abrir biblioteca</string>
    <string name="home_quick_picks">Escolha a dedo</string>
    <string name="home_play_all">Tocar tudo</string>
    <string name="home_recently_added">Adicionadas recentemente</string>
    <string name="permission_rationale">Para tocar suas fitas, o app precisa de acesso aos arquivos de áudio do dispositivo.</string>
    <string name="permission_allow">Permitir acesso</string>
    <string name="permission_open_settings">Abrir configurações do app</string>
    <string name="search_title">Buscar</string>
    <string name="search_hint">Título, artista ou álbum</string>
    <string name="search_empty_library">Biblioteca vazia.</string>
    <string name="search_no_results">Nada encontrado para \"%1$s\".</string>
    <string name="library_title">Biblioteca</string>
    <string name="filter_playlists">Playlists</string>
    <string name="filter_albums">Álbuns</string>
    <string name="filter_artists">Artistas</string>
    <string name="filter_songs">Músicas</string>
    <string name="filter_clear">Limpar filtro</string>
    <string name="sort_recent">Atividade recente</string>
    <string name="sort_alphabetical">Ordem alfabética</string>
    <string name="sort_size">Mais faixas</string>
    <string name="sort_label">Ordenar</string>
    <string name="view_as_list">Ver em lista</string>
    <string name="view_as_grid">Ver em grade</string>
    <string name="library_empty">Nada na biblioteca ainda.</string>
    <string name="library_shuffle_all">Modo aleatório</string>
    <string name="new_playlist">Nova playlist</string>
    <string name="collection_not_found">Coleção não encontrada.</string>
    <string name="collection_options">Opções da playlist</string>
    <string name="rename_playlist">Renomear playlist</string>
    <string name="favorites_empty">Nenhuma favorita ainda. Toque no coração no player ou segure uma música e escolha \"Adicionar às favoritas\".</string>
    <string name="playlist_empty">Playlist vazia. Segure uma música e escolha \"Salvar na playlist\" para adicioná-la aqui.</string>
    <string name="drag_to_reorder">Arrastar para reordenar</string>
    <string name="playlist_name_hint">Nome da playlist</string>
    <string name="delete_playlist_title">Excluir playlist?</string>
    <string name="delete_playlist_message">\"%1$s\" será excluída. As músicas continuam no aparelho.</string>
    <string name="delete_song_title">Excluir música?</string>
    <string name="delete_song_message">\"%1$s\" será apagada do aparelho.</string>
    <string name="player_now_playing">TOCANDO AGORA</string>
    <string name="player_no_tape">Nenhuma fita inserida</string>
    <string name="player_previous">Faixa anterior</string>
    <string name="player_next">Próxima faixa</string>
    <string name="player_repeat">Repetir</string>
    <string name="player_up_next">A SEGUIR</string>
    <string name="player_progress">Barra de progresso</string>
    <string name="queue_title">A seguir</string>
    <string name="queue_nothing_after">Nenhuma faixa depois desta</string>
    <string name="queue_empty">A fila está vazia.</string>
    <string name="queue_now_playing">Tocando agora • %1$s</string>
    <string name="queue_remove">Remover da fila</string>
    <string name="msg_playlist_created">Playlist \"%1$s\" criada</string>
    <string name="msg_saved_to">Salvo em \"%1$s\"</string>
    <string name="msg_already_in">Já está em \"%1$s\"</string>
    <string name="msg_playlist_deleted">Playlist excluída</string>
    <string name="msg_added_favorite">Adicionada às favoritas</string>
    <string name="msg_removed_favorite">Removida das favoritas</string>
    <string name="msg_delete_failed">Não foi possível excluir a música</string>
    <string name="msg_song_deleted">\"%1$s\" excluída</string>
    <string name="msg_cannot_play">Não foi possível tocar \"%1$s\" (formato não suportado)</string>
    <string name="filter_lossless">Lossless</string>
    <string name="badge_lossless">LOSSLESS</string>
    <string name="audio_bits">%1$d-bit</string>
    <string name="audio_khz">%1$s kHz</string>
    <string name="menu_edit_tags">Editar tags</string>
    <string name="menu_edit_album_cover">Editar capa do álbum</string>
    <string name="tags_title">Editar tags</string>
    <string name="tags_field_title">Título</string>
    <string name="tags_field_artist">Artista</string>
    <string name="tags_field_album">Álbum</string>
    <string name="tags_field_album_artist">Artista do álbum</string>
    <string name="tags_field_year">Ano</string>
    <string name="tags_field_track">Faixa nº</string>
    <string name="tags_field_genre">Gênero</string>
    <string name="tags_cover">Capa</string>
    <string name="tags_cover_search">Buscar online</string>
    <string name="tags_cover_gallery">Da galeria</string>
    <string name="tags_cover_remove">Remover</string>
    <string name="tags_apply_album">Aplicar a capa a todo o álbum (%1$s)</string>
    <string name="tags_save">Salvar no arquivo</string>
    <string name="tags_loading">Lendo tags…</string>
    <string name="tags_read_failed">Não foi possível ler as tags deste arquivo; os campos mostram o que a biblioteca conhece.</string>
    <string name="cover_search_title">Buscar capa</string>
    <string name="cover_search_hint">Artista e álbum</string>
    <string name="cover_search_empty">Nenhuma capa encontrada.</string>
    <string name="cover_search_failed">Sem conexão ou busca indisponível.</string>
    <string name="cover_search_source">Capas do iTunes e Deezer</string>
    <string name="msg_tags_saved">Tags salvas no arquivo</string>
    <string name="msg_tags_failed">Não foi possível gravar as tags neste arquivo</string>
    <string name="msg_cover_failed">Não foi possível baixar a capa</string>
    <string name="settings_section_backup">Backup</string>
    <string name="settings_backup_export">Exportar playlists e favoritas</string>
    <string name="settings_backup_export_summary">Salva um arquivo .json onde você escolher</string>
    <string name="settings_backup_import">Restaurar backup</string>
    <string name="settings_backup_import_summary">Junta com as playlists e favoritas atuais</string>
    <string name="msg_backup_exported">Backup exportado</string>
    <string name="msg_backup_failed">Não foi possível salvar o backup</string>
    <string name="msg_backup_invalid">Arquivo de backup inválido</string>
    <string name="msg_backup_imported">Backup restaurado: %1$d playlists, %2$d favoritas</string>
    <string name="msg_backup_imported_missing">Backup restaurado: %1$d playlists, %2$d favoritas (%3$d músicas não encontradas)</string>
    <string name="player_lyrics">LETRA</string>
    <string name="lyrics_title">LETRA</string>
    <string name="lyrics_loading">Procurando a letra…</string>
    <string name="lyrics_not_found">Letra não encontrada para esta música.</string>
    <string name="lyrics_offline">Sem conexão para buscar a letra.</string>
    <string name="lyrics_retry">Tentar de novo</string>
    <string name="lyrics_source_file">Letra gravada no arquivo</string>
    <string name="lyrics_source_lrc">Letra do arquivo .lrc</string>
    <string name="lyrics_source_online">Letra: LRCLIB (lrclib.net)</string>
    <string name="menu_rename_song">Renomear</string>
    <string name="rename_song_title">Renomear música</string>
    <string name="rename_song_hint">Nome da música</string>
    <string name="rename_song_file">Renomear também o arquivo</string>
    <string name="msg_song_renamed">Música renomeada</string>
    <string name="msg_rename_failed">Não foi possível renomear a música</string>
    <string name="badge_hq_description">Alta qualidade (lossless)</string>
    <string name="msg_language_changed">Idioma alterado</string>
    <string name="settings_title">Configurações</string>
    <string name="settings_section_audio">Áudio</string>
    <string name="settings_section_general">Geral</string>
    <string name="settings_section_about">Sobre</string>
    <string name="settings_equalizer">Equalizador</string>
    <string name="settings_on">Ativado</string>
    <string name="settings_off">Desativado</string>
    <string name="settings_theme">Tema</string>
    <string name="theme_dark">Escuro</string>
    <string name="theme_light">Claro</string>
    <string name="theme_system">Padrão do sistema</string>
    <string name="settings_section_appearance">Aparência</string>
    <string name="settings_language">Idioma</string>
    <string name="settings_reload_summary">Procurar novas músicas no aparelho</string>
    <string name="settings_whats_new">Novidades</string>
    <string name="settings_whats_new_summary">Histórico de versões</string>
    <string name="settings_version">Versão</string>
    <string name="language_system">Padrão do sistema</string>
    <string name="language_pt">Português (Brasil)</string>
    <string name="language_en">English</string>
    <string name="language_es">Español</string>
    <string name="widget_idle">Toque em play para continuar a última fita</string>
</resources>